# record-storable

./: ChangeLog.md  README.md  record-storable.cabal  stack.yaml
.github/workflows/: main.yml
src/Foreign/Storable/: Promoted.hs
src/Foreign/Storable/Promoted/: TH.hs
src/Record/: Storable.hs
src/Record/Storable/: Mutable.hs
test/: Spec.hs
