name:                record-storable
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Alexey Vagarenko
maintainer:          vagarenko@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
              Record.Storable
            , Record.Storable.Mutable
            , Foreign.Storable.Promoted
            , Foreign.Storable.Promoted.TH
  -- other-modules:       
  -- other-extensions:    
  build-depends:       
              base
            , derive-storable
            , ghc-prim
            , lens
            , pretty-show
            , singletons
            , template-haskell
            , vector
            , primitive
  hs-source-dirs:      src
  default-language:    Haskell2010
